IMPORTANT: Allow User Variables=True

--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;port=3306;database=TeacherDb;user=root;password=linux"
+    "DefaultConnection": "server=localhost;port=3306;database=TeacherDb;Allow User Variables=True;user=root;password=linux"
   }
 }
