--- a/WebAPI.Test/WebAPI.Test.csproj
+++ b/WebAPI.Test/WebAPI.Test.csproj
@@ -11,6 +11,7 @@
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.8" />
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="NUnit" Version="4.2.2" />
       <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
     </ItemGroup>
