--- a/WebMVC/appsettings.json
+++ b/WebMVC/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ServiceUrls": {
+    "API": "https://localhost:7002"
+  }
 }
